--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,16 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    
+    background-color: white;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(200, 200, 200);
 }
 
 
