--- a/styles/header.css
+++ b/styles/header.css
@@ -10,6 +10,7 @@
     left: 0px;
     right: 0px;
 
+    z-index: 100;
 }
 
 
@@ -111,6 +112,24 @@
 
 .youtube-apps-icon {
     height: 24px;
+}
+
+.div-notifications {
+    position: relative;
+}
+
+.div-notification-count {
+    position: absolute;
+    top: -1px;
+    right: -4px;
+    background-color: rgb(202, 1, 1);
+    color: white;
+    padding: 2px 5px;
+    border-radius: 50%;
+    font-family: Roboto, Arial;
+    font-size: 11px;
+    font-weight: 700;
+
 }
 
 .notifications-icon {
