--- a/styles/general.css
+++ b/styles/general.css
@@ -1,3 +1,47 @@
+:root {
+    /* Light mode (default) */
+    --background-color: white;
+    --text-color: black;
+    --secondary-text-color: rgb(45, 45, 45);
+    --hover-color: rgb(236, 236, 236);
+    --search-border-color: rgb(192, 192, 192);
+    --search-background-color: rgb(248, 248, 248);
+    --create-button-color: rgb(236, 236, 236);
+    --notification-color: rgb(219, 19, 19);
+    --tooltip-background: rgb(243, 242, 242);
+    --shadow-color: rgba(0, 0, 0, 0.1);
+    --icon-filter: none;
+}
+
+[data-theme="dark"] {
+    /* Dark mode */
+    --background-color: #0f0f0f;
+    --text-color: white;
+    --secondary-text-color: #aaaaaa;
+    --hover-color: #272727;
+    --search-border-color: #303030;
+    --search-background-color: #1c1c1c;
+    --create-button-color: #1c1c1c;
+    --notification-color: #ff0000;
+    --tooltip-background: #272727;
+    --shadow-color: rgba(255, 255, 255, 0.1);
+    --icon-filter: invert(1) brightness(1.8);
+}
+
+/* Apply icon filter to SVG images in dark mode, excluding specific images */
+[data-theme="dark"] img:not(.my-channel-picture):not(.channel-picture):not(.video-thumbnail):not(.youtube-logo) {
+    filter: var(--icon-filter);
+}
+
+
+.youtube-logo #youtube-paths_text path {
+    fill: black;
+}
+
+[data-theme="dark"] .youtube-logo #youtube-paths_text path {
+    fill: white;
+}
+
 p {
     margin: 0px;
 }
@@ -8,8 +52,10 @@ body {
     padding-right: 35px;
     padding-left: 90px;
     padding-bottom: 35px;
-
     font-family: Roboto, Arial;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    transition: background-color 0.3s, color 0.3s;
 }
 
 button {
