--- a/styles/header.css
+++ b/styles/header.css
@@ -76,6 +76,7 @@
     padding-left: 20px;
     background-color: var(--background-color);
     color: var(--text-color);
+    font-size: 16px; /* Increased font size for input text */
     
     box-shadow: inset 1px 1px 0.5px var(--shadow-color);
     transition: box-shadow 0.2s ease-in-out, background-color 0.3s, color 0.3s, border-color 0.3s;
